# LinearGradient

./: CMakeLists.txt  LevenbergMarquardt.h  README.md  lineargradient.h  main.cpp  preconditionedconjugategradient.h  test.cpp  test.h
